data/derived/fa15/progs/unify/prog0144.ml.out
Characters 85-88:
  in (g b,b));;
      ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
